# hazelcast-rest

./: .gitignore  .travis.yml  hazelcast-rest.cabal
benchmark/: Benchmark.hs
src/Database/Hazelcast/: Rest.hs
src/Database/Hazelcast/Rest/: Cluster.hs  Core.hs  Internal.hs  Map.hs
