name:                hazelcast-rest
version:             0.1.0.0
synopsis:            Client library for the Hazelcast utilizing REST protocol
license:             BSD3
author:              Typeable.io contributors
maintainer:          makeit@typeable.io
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.9 && <5
                     , bytestring >=0.10.8
                     , base64-bytestring
                     , http-client >=0.5
                     , http-types >=0.9
                     , mtl >=2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Database.Hazelcast.Rest
                     , Database.Hazelcast.Rest.Cluster
                     , Database.Hazelcast.Rest.Core
                     , Database.Hazelcast.Rest.Internal
                     , Database.Hazelcast.Rest.Map
  ghc-options:         -Wall

benchmark hazelcast-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  default-language:    Haskell2010
  main-is:             Benchmark.hs
  build-depends:       base >=4.10 && <5
                     , hazelcast-rest
                     , mtl >=2.2
                     , time
  ghc-options:         -O2 -Wall -rtsopts
